# station-skills

./: .env.example  .gitignore  Caddyfile  Readme.md  docker-compose.yml
.github/workflows/: builb_nebo.yml  caddy.yml  debt.yml  deploy.yml  lint.yml  lint_debt.yml  lint_nebolive.yml  linters.yml  nebolive.yml
caddy/: Caddyfile  Dockerfile
debt/: Dockerfile  Readme.md
debt/.github/workflows/: publish.yml
debt/src/: go.mod  helpers.go  main.go
nebolive-gateway-api/: .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml  requirements.txt
nebolive-gateway-api/.github/workflows/: publish.yml
nebolive-gateway-api/src/: main.py  nebolive_service.py  report.py  shortest_sensor.py
